@@ -1,4 +1,4 @@
-# TODO: rename seewave function stft() to stdft(). Found only in soundgen.R, although istft() is also found in source.R;
+# TODO: debug removing anchors in app; rename seewave function stft() to stdft(). Found only in soundgen.R, although istft() is also found in source.R;
 
 #' @import stats graphics utils grDevices
 #' @encoding UTF-8
